Freedom Sanbox Ant Deploy/src/objects/Portfolio_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Units__c</fullName>
        <label>No of Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Cost__c</fullName>
        <label>Per Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Txn_Amount__c</fullName>
        <label>Txn Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Txn_Category__c</fullName>
        <label>Txn Category</label>
        <picklist>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Txn_Ref_Number__c</fullName>
        <label>Txn Ref Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Portfolio Transaction</label>
    <nameField>
        <displayFormat>PTXN-{00000000}</displayFormat>
        <label>Transaction Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>